@@ -1053,7 +1053,6 @@ run_scheduled_events(time_t now)
 
   /** 3d. And every 60 seconds, we relaunch listeners if any died. */
   if (!we_are_hibernating() && time_to_check_listeners < now) {
-    /* 0 means "only launch the ones that died." */
     retry_all_listeners(NULL, NULL);
     time_to_check_listeners = now+60;
   }
